--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-
+    <link rel="canonical" href="https://colorbynumberprintable.online/" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q0Z44QN74E"></script>
 
     <script>
@@ -274,8 +274,7 @@
                         <h3 class="font-bold text-lg mb-2">Easy Kids Animal Printables</h3>
                         <p class="text-gray-600 text-sm mb-4">Simple, large-number designs for preschoolers and
                             toddlers.</p>
-                        <a href="#"
-                            class="text-primary font-medium hover:underline flex items-center">
+                        <a href="#" class="text-primary font-medium hover:underline flex items-center">
                             Download <i class="fa-solid fa-arrow-right ml-2 text-sm"></i>
                         </a>
                     </div>
@@ -288,8 +287,7 @@
                     <div class="p-5">
                         <h3 class="font-bold text-lg mb-2">Adult Mandala Sheets</h3>
                         <p class="text-gray-600 text-sm mb-4">Detailed patterns for stress relief and relaxation.</p>
-                        <a href="#"
-                            class="text-primary font-medium hover:underline flex items-center">
+                        <a href="#" class="text-primary font-medium hover:underline flex items-center">
                             Download <i class="fa-solid fa-arrow-right ml-2 text-sm"></i>
                         </a>
                     </div>
@@ -302,8 +300,7 @@
                     <div class="p-5">
                         <h3 class="font-bold text-lg mb-2">Christmas Holiday Pages</h3>
                         <p class="text-gray-600 text-sm mb-4">Santa, tree, and snowman designs for the holidays.</p>
-                        <a href="#"
-                            class="text-primary font-medium hover:underline flex items-center">
+                        <a href="#" class="text-primary font-medium hover:underline flex items-center">
                             Download <i class="fa-solid fa-arrow-right ml-2 text-sm"></i>
                         </a>
                     </div>
@@ -317,8 +314,7 @@
                         <h3 class="font-bold text-lg mb-2">Addition Math Worksheets</h3>
                         <p class="text-gray-600 text-sm mb-4">Combine coloring with math practice for elementary kids.
                         </p>
-                        <a href="#"
-                            class="text-primary font-medium hover:underline flex items-center">
+                        <a href="#" class="text-primary font-medium hover:underline flex items-center">
                             Download <i class="fa-solid fa-arrow-right ml-2 text-sm"></i>
                         </a>
                     </div>
@@ -642,18 +638,12 @@
                 <div>
                     <h3 class="font-bold text-lg mb-4">Holiday & Seasonal</h3>
                     <ul class="space-y-2">
-                        <li><a href="#"
-                                class="text-gray-400 hover:text-white transition-colors">Christmas</a></li>
-                        <li><a href="#"
-                                class="text-gray-400 hover:text-white transition-colors">Halloween</a></li>
-                        <li><a href="#"
-                                class="text-gray-400 hover:text-white transition-colors">Thanksgiving</a></li>
-                        <li><a href="#"
-                                class="text-gray-400 hover:text-white transition-colors">Spring</a></li>
-                        <li><a href="#"
-                                class="text-gray-400 hover:text-white transition-colors">Summer</a></li>
-                        <li><a href="#"
-                                class="text-gray-400 hover:text-white transition-colors">Fall</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Christmas</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Halloween</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Thanksgiving</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Spring</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Summer</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Fall</a></li>
                     </ul>
                 </div>
                 <!-- Contact -->
