--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 </div>
                 <!-- Hero Image (Optimized Alt Text) -->
                 <div class="rounded-xl overflow-hidden shadow-xl">
-                    <img src="./image/Gemini_Generated_Image_uqv3yxuqv3yxuqv3.png"
+                    <img src="./image/Free printable color by number.png"
                         alt="Free printable color by number pages for kids and adults, featuring Christmas, Halloween, and math-themed designs with clear number labels and vibrant outline details"
                         class="w-full h-auto object-cover hover-lift" loading="lazy">
                 </div>
@@ -281,7 +281,7 @@
                 </div>
                 <!-- Card 2: Adult Complex -->
                 <div class="bg-white rounded-xl shadow-md overflow-hidden hover-lift">
-                    <img src="./image/Gemini_Generated_Image_md2lodmd2lodmd2l.png"
+                    <img src="./image/Adult Mandala Sheets.png"
                         alt="Complex mandala color by number printable for adults, showcasing intricate geometric patterns, fine details, and neutral background for stress-relief coloring"
                         class="w-full h-48 object-cover" loading="lazy">
                     <div class="p-5">
@@ -294,7 +294,7 @@
                 </div>
                 <!-- Card 3: Christmas -->
                 <div class="bg-white rounded-xl shadow-md overflow-hidden hover-lift">
-                    <img src="./image/Gemini_Generated_Image_w0a5qtw0a5qtw0a5.png"
+                    <img src="./image/Easy Kids Animal Printables.png"
                         alt="Christmas color by number printable with Santa Claus, Christmas tree, and snowman designs, warm red-green color palette, and clear number guides"
                         class="w-full h-48 object-cover" loading="lazy">
                     <div class="p-5">
@@ -307,7 +307,7 @@
                 </div>
                 <!-- Card 4: Math Worksheets -->
                 <div class="bg-white rounded-xl shadow-md overflow-hidden hover-lift">
-                    <img src="./image/Gemini_Generated_Image_cul1k7cul1k7cul1.png"
+                    <img src="./image/Addition Math Worksheets.png"
                         alt="Math addition color by number worksheet for elementary kids, linking math problems to color sections, bright colors, and easy-to-read numbers"
                         class="w-full h-48 object-cover" loading="lazy">
                     <div class="p-5">
@@ -373,7 +373,7 @@
                     </a>
                 </div>
                 <div class="order-1 md:order-2">
-                    <img src="./image/Gemini_Generated_Image_k5p2t7k5p2t7k5p2.png"
+                    <img src="./image/Collection of kid-friendly color.png"
                         alt="Collection of kid-friendly color by number printables with dinosaur and animal themes, large numbers (1-5), thick outlines, and light background for little hands"
                         class="w-full h-auto rounded-xl shadow-xl hover-lift" loading="lazy">
                 </div>
@@ -386,7 +386,7 @@
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div>
-                    <img src="./image/20250922171228_nano_banana.png"
+                    <img src="./image/Color by Number for Adults.png"
                         alt="Set of adult color by number printables including abstract art and landscape designs, detailed patterns, soft color tones, and high-resolution outlines"
                         class="w-full h-auto rounded-xl shadow-xl hover-lift" loading="lazy">
                 </div>
@@ -443,7 +443,7 @@
             <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
                 <!-- Christmas -->
                 <div class="bg-white rounded-xl shadow-md overflow-hidden hover-lift">
-                    <img src="./image/20250922171323_nano_banana.png"
+                    <img src="./image/Christmas color by number printable.png"
                         alt="Christmas color by number printable featuring snowman and decorated Christmas tree, cheerful red-green hues, and simple number coding for family fun"
                         class="w-full h-48 object-cover" loading="lazy">
                     <div class="p-5">
@@ -455,7 +455,7 @@
                 </div>
                 <!-- Halloween -->
                 <div class="bg-white rounded-xl shadow-md overflow-hidden hover-lift">
-                    <img src="./image/20250922171429_nano_banana.png"
+                    <img src="./image/Halloween color by number printable.png"
                         alt="Halloween color by number printable with jack-o’-lantern and ghost designs, playful orange-black color scheme, and spooky-but-friendly outline style"
                         class="w-full h-48 object-cover" loading="lazy">
                     <div class="p-5">
@@ -467,7 +467,7 @@
                 </div>
                 <!-- Thanksgiving -->
                 <div class="bg-white rounded-xl shadow-md overflow-hidden hover-lift">
-                    <img src="./image/20250922171501_nano_banana.png"
+                    <img src="./image/Thanksgiving color by number printable.png"
                         alt="Thanksgiving color by number printable showing turkey and cornucopia, warm brown-yellow tones, and cozy harvest-themed details"
                         class="w-full h-48 object-cover" loading="lazy">
                     <div class="p-5">
@@ -479,7 +479,7 @@
                 </div>
                 <!-- Spring -->
                 <div class="bg-white rounded-xl shadow-md overflow-hidden hover-lift">
-                    <img src="./image/20250922171535_nano_banana.png"
+                    <img src="./image/Spring color by number printable.png"
                         alt="Spring color by number printable with flowers and bunny rabbits, fresh pink-green color palette, and bright, lively outline art"
                         class="w-full h-48 object-cover" loading="lazy">
                     <div class="p-5">
@@ -490,7 +490,7 @@
                 </div>
                 <!-- Summer -->
                 <div class="bg-white rounded-xl shadow-md overflow-hidden hover-lift">
-                    <img src="./image/20250922171607_nano_banana.png"
+                    <img src="./image/Summer color by number printable.png"
                         alt="Summer color by number printable with beach scene and ice cream, cool blue-yellow hues, and fun, sunny design elements"
                         class="w-full h-48 object-cover" loading="lazy">
                     <div class="p-5">
@@ -501,7 +501,7 @@
                 </div>
                 <!-- Fall -->
                 <div class="bg-white rounded-xl shadow-md overflow-hidden hover-lift">
-                    <img src="./image/20250922171637_nano_banana.png"
+                    <img src="./image/Fall color by number printable.png"
                         alt="Fall color by number printable featuring autumn leaves and pumpkins, rich orange-brown tones, and warm seasonal details for cozy coloring"
                         class="w-full h-48 object-cover" loading="lazy">
                     <div class="p-5">
