--- a/index.html
+++ b/index.html
@@ -666,8 +666,8 @@
                 <p>&copy; 2024 ColorByNumberPrintable.online. All rights reserved. For personal and educational use
                     only.</p>
                 <div class="flex justify-center space-x-4 mt-4">
-                    <a href="/terms" class="hover:text-white transition-colors">Terms of Service</a>
-                    <a href="/privacy" class="hover:text-white transition-colors">Privacy Policy</a>
+                    <a href="/terms.html" class="hover:text-white transition-colors">Terms of Service</a>
+                    <a href="/privacy.html" class="hover:text-white transition-colors">Privacy Policy</a>
                     <a href="#" class="hover:text-white transition-colors">Disclaimer</a>
                 </div>
             </div>
