--- a/terms.html
+++ b/terms.html
@@ -261,9 +261,9 @@
                 <div>
                     <h3 class="font-semibold text-lg mb-4">Legal</h3>
                     <ul class="space-y-2 text-gray-400">
-                        <li><a href="/privacy" class="hover:text-primary transition-colors">Privacy Policy</a></li>
-                        <li><a href="/terms" class="hover:text-primary transition-colors">Terms of Service</a></li>
-                        <li><a href="/disclaimer" class="hover:text-primary transition-colors">Disclaimer</a></li>
+                        <li><a href="/privacy.html" class="hover:text-primary transition-colors">Privacy Policy</a></li>
+                        <li><a href="/terms.html" class="hover:text-primary transition-colors">Terms of Service</a></li>
+                        <li><a href="#" class="hover:text-primary transition-colors">Disclaimer</a></li>
                     </ul>
                 </div>
                 
