--- a/index.html
+++ b/index.html
@@ -708,8 +708,8 @@
               </div>
             </div>
             <a
-              href="#"
-              class="bg-primary hover:bg-primary/90 text-white font-semibold px-6 py-3 rounded-lg shadow-md hover:shadow-lg transition-all inline-block"
+              href="./BrowseKidsPrintables.pdf"
+              class="bg-primary hover:bg-primary/90 text-white font-semibold px-6 py-3 rounded-lg shadow-md hover:shadow-lg transition-all inline-block" target="_blank"
             >
               Browse Kids Printables
               <i class="fa-solid fa-arrow-right ml-2"></i>
