--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
               >Holidays</a
             >
             <a
-              href="/blog"
+              href="#"
               class="font-medium text-gray-700 hover:text-primary transition-colors"
               >Blog</a
             >
@@ -263,7 +263,7 @@
               >Holiday Themes</a
             >
             <a
-              href="/blog"
+              href="#"
               class="font-medium text-gray-700 hover:text-primary transition-colors py-2"
               >Blog</a
             >
@@ -936,7 +936,7 @@
                       <li><a href="/#for-kids" class="hover:text-primary transition-colors">For Kids</a></li>
                       <li><a href="/#for-adults" class="hover:text-primary transition-colors">For Adults</a></li>
                       <li><a href="/#holidays" class="hover:text-primary transition-colors">Holiday Themes</a></li>
-                      <li><a href="/blog" class="hover:text-primary transition-colors">Blog</a></li>
+                      <li><a href="#" class="hover:text-primary transition-colors">Blog</a></li>
                   </ul>
               </div>
               
