--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       property="og:title"
       content="Free Printable Color by Number Pages & Line Art Tool | For Kids & Adults"
     />
+    <meta name="google-adsense-account" content="ca-pub-3383070348689557">
     <meta
       property="og:description"
       content="Download free color by number printables or use our free tool to convert your own photos into coloring pages. Perfect for all ages!"
@@ -56,6 +57,8 @@
       rel="stylesheet"
     />
     <link rel="canonical" href="https://colorbynumberprintable.online/" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3383070348689557"
+     crossorigin="anonymous"></script>
 
     <!-- Scripts (Analytics, etc.) -->
     <script
