--- a/privacy.html
+++ b/privacy.html
@@ -19,12 +19,15 @@
     <meta name="twitter:title" content="Privacy Policy | Color By Number Printable">
     <meta name="twitter:description" content="Our privacy policy explains data collection and protection practices.">
     <title>Privacy Policy | Free Printable Color by Number Pages</title>
+    <meta name="google-adsense-account" content="ca-pub-3383070348689557">
     <!-- External Resources -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3383070348689557"
+     crossorigin="anonymous"></script>
     <!-- Tailwind Config -->
     <script>
         tailwind.config = {
