--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@
               </div>
             </div>
             <a
-              href="#"
+              href="#line-art-tool"
               class="bg-primary hover:bg-primary/90 text-white font-semibold px-6 py-3 rounded-lg shadow-md hover:shadow-lg transition-all inline-block"
             >
               Browse Adult Printables
@@ -815,9 +815,7 @@
               <p class="text-gray-600 text-sm mb-4">
                 Santa, reindeer, and Christmas tree designs.
               </p>
-              <a href="#" class="text-primary font-medium hover:underline"
-                >View All</a
-              >
+           
             </div>
           </div>
           <!-- Halloween -->
@@ -833,9 +831,7 @@
               <p class="text-gray-600 text-sm mb-4">
                 Jack-o’-lanterns, ghosts, and witches.
               </p>
-              <a href="#" class="text-primary font-medium hover:underline"
-                >View All</a
-              >
+        
             </div>
           </div>
           <!-- Thanksgiving -->
@@ -851,9 +847,7 @@
               <p class="text-gray-600 text-sm mb-4">
                 Turkeys, cornucopias, and fall harvest.
               </p>
-              <a href="#" class="text-primary font-medium hover:underline"
-                >View All</a
-              >
+   
             </div>
           </div>
         </div>
